--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<h1>Let's do some practice!</h1>
+    <h1>MILKY WAY</h1>
+    <p>The Milky Way is the galaxy that includes the Solar System, with the name describing the galaxy's appearance
+        from Earth: a hazy band of light seen in the night sky formed from stars that cannot be individually
+        distinguished by the naked eye.</p>
+    <figure><img src="https://dq0hsqwjhea1.cloudfront.net/milky_way.jpg" alt="Milky Way" title="Milky Way"
+            align="centre" height="700" width="700"><br>
+
+        <figcaption>Miky Way contains a solar system.</figcaption>
+
+    </figure>
+    <h2>Solar System</h2>
+    <p>It contains eight planets mentioned below;</p>
+    <ol>
+        <li>Mercury</li>
+        <li>Venus</li>
+        <li>Earth</li>
+        <li>Mars</li>
+        <li>Jupiter</li>
+        <li>Saturn</li>
+        <li>Uranus</li>
+        <li>Neptune</li>
+
+
+    </ol>
+    <img src="https://d.newsweek.com/en/full/2168730/planets-solar-system.jpg?w=1600&h=1200&q=88&f=548036f72893cbe8fdbe5db06c169b8e"
+        alt="Planets" title="planets" width="600" height="450">
+
+
+
+
+
+
 </body>
+
 </html>
