--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -34,7 +34,9 @@
 
     </ol>
     <img src="https://d.newsweek.com/en/full/2168730/planets-solar-system.jpg?w=1600&h=1200&q=88&f=548036f72893cbe8fdbe5db06c169b8e"
-        alt="Planets" title="planets" width="600" height="450">
+        alt="Planets" title="planets" width="600" height="450"><br>
+
+
 
 
 
