--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body><a href="./index.html">Home page</a> <br><br>
     <h2 class="support">Contact Support</h2>
     <p>We're happy to answer any questions you may have!
         Please fill out the support form below and the member of our support 
