--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body><a href="./contact.html">Contact page</a> <br><br>
+<body><a href="./contact.html">Contact page</a> <br>
+    <a href="./about.html">About page</a><br><br>
     <h1>MILKY WAY</h1>
     <p>The Milky Way is the galaxy that includes the Solar System, with the name describing the galaxy's appearance
         from Earth: a hazy band of light seen in the night sky formed from stars that cannot be individually
