--- a/about.html
+++ b/about.html
@@ -22,7 +22,106 @@
     Universe.Following the 1920 Great Debate between the astronomers Harlow Shapley and Heber Doust Curtis, 
     observations by Edwin Hubble showed that the Milky Way is just one of many galaxies.</p>
 </blockquote>
+<img class="image" src="https://cdn.mos.cms.futurecdn.net/VtyC8vpXb9KvMZMuM2TjHk.jpg" alt="milky_way"
+width="400" height="300">
+<h2 id="h2">Solar System and its Planets Data Table:</h2>
+<table id="tab" border="1">
+<tr>
+<th>Pkanet</th>
+<th>Diameter <br>(km)</th>
+<th>Rotation <br>Period <br>(in earth days )</th>
+<th> Revolution<br>Period <br>(in earth days )</th>
+<th>Average <br> temperature <br>( 
+    <sup>o</sup>C
+)</th>
+<th>Surface <br>composition</th>
+<th>Rings and Moons</th>
+<th>Trvel time <br>from Earth</th>
+</tr>
 
+<tr>
+<th>Mercury</th>
+<td>4879</td>
+<td>58.66</td>
+<td>88   <sup>o</sup>C</td>
+<td>179</td>
+<td>rocky</td>
+<td>0</td>
+<td>5 months</td>
+</tr>
+<tr>
+     <th>Venus</th>
+     <td>12104</td>
+     <td>243</td>
+     <td>224   <sup>o</sup>C</td>
+     <td>482</td>
+     <td>rocky</td>
+     <td>0</td>
+     <td>3 months</td>
+ </tr>
+ <tr>
+ <th>Earth</th>
+ <td>12756</td>
+ <td>1</td>
+<td>365.25   <sup>o</sup>C</td>
+<td>15</td>
+ <td>rocky</td>
+ <td>0</td>
+<td>-</td>
+</tr>
+<tr>
+    <th>Mars</th>
+    <td>6756</td>
+    <td>1.06</td>
+    <td>687   <sup>o</sup>C</td>
+    <td>-63</td>
+    <td>rocky</td>
+    <td>2</td>
+    <td>8 months</td>
+    <tr>
+        
+    </tr>
+    <th>Jupiter</th>
+    <td>142984</td>
+    <td>0.42</td>
+    <td>4332  <sup>o</sup>C</td>
+    <td>-21</td>
+    <td>gaseous</td>
+    <td>60 moons+ <br>rings</td>
+    <td>5 years</td>
+    </tr>
+    <tr>
+    <th>Saturn</th>
+    <td>120536</td>
+    <td>0.45</td>
+    <td>10775   <sup>o</sup>C</td>
+    <td>-125</td>
+    <td>gaseous</td>
+    <td>31 moons+ <br>rings</td>
+    <td>7 years</td>
+    </tr>
+    <tr>
+    <th>Uranus</th>
+    <td>51118</td>
+    <td>0.71</td>
+    <td>30681   <sup>o</sup>C</td>
+    <td>-193</td>
+    <td>gaseous</td>
+    <td>27 moons+ <br>rings</td>
+    <td>10 years</td>
+    </tr>
+    <tr>
+    <th>Neptune</th>
+    <td>49528</td>
+    <td>0.67</td>
+    <td>60193   <sup>o</sup>C</td>
+    <td>-173</td>
+    <td>gaseous</td>
+    <td>13 moons+ <br>rings</td>
+    <td>12 years</td>
+    </tr>
+
+</table>
 
 
 
