--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,20 @@
     <p>We're happy to answer any questions you may have!
         Please fill out the support form below and the member of our support 
         staff will respond as soon as </p>
-    Your email address <br><input type="text" name="useremail"><br><br>
-Full name <br><input type="text" name="username"><br><br>
-Subject line <br><input type="text" name="subjectline"><br><br>
-Message <br><textarea name="message" id="" cols="30" rows="10"></textarea><br>Please enter the details of your 
-request. <br> <br> <br>
-Attachments <br><input type="file" name="file"><br><br>
-<input type="submit" name="submit" value="submit" class="submit">
+<form action="http://www.example.com/login/"
+        method="post">
+        <strong>Your email address</strong> 
+         <br><input type="text" name="useremail"><br><br>
+         <strong>Full name</strong> 
+         <br><input type="text" name="username" required="required" /><br><br>
+         <strong>Subject line</strong> 
+        <br><input type="text" name="subjectline" required="required" /><br><br>
+        <strong>Message</strong> 
+        <br><textarea name="message" id="" cols="30" rows="10" required="required" ></textarea><br> 
+        <strong>Please enter the details of your request.</strong> <br> <br> <br>
+<strong>Attachments</strong> 
+<br><input type="file" name="file" required="required" /><br><br>
+<input type="submit" name="submit" value="submit" class="submit" required="required" /></form>
 
 </body>
 </html>
