--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ width="400" height="300">
 <h2 id="h2">Solar System and its Planets Data Table:</h2>
 <table id="tab" border="1">
 <tr>
-<th>Pkanet</th>
+<th>Planet</th>
 <th>Diameter <br>(km)</th>
 <th>Rotation <br>Period <br>(in earth days )</th>
 <th> Revolution<br>Period <br>(in earth days )</th>
